Add recent news widget
- sort by player name in player compare
- update angular typings

--- a/src/components/playerCompare/playerCompare.template.html
+++ b/src/components/playerCompare/playerCompare.template.html
@@ -15,7 +15,7 @@
       ng-show="$ctrl.selectedTeamId >= 0"
       ng-model="$ctrl.comparePlayerId"
       ng-change="$ctrl.playerSelected()"
-      ng-options="player.UniqueID as player.Name for player in $ctrl.playersOnSelectedTeam">
+      ng-options="player.UniqueID as player.Name for player in $ctrl.playersOnSelectedTeam | orderBy:'Name'">
       <option value="" selected>Select a player...</option>
     </select>
   </div>
