--- a/src/views/teamInfo/teamInfo.template.html
+++ b/src/views/teamInfo/teamInfo.template.html
@@ -17,7 +17,7 @@
     <div class="col-md-12">
       <div class="row">
         <div class="col-sm-6">
-          <h3><span ng-bind="$ctrl.teamInfo.Name"></span></h3>
+          <h3><span ng-bind="$ctrl.teamInfo.City"></span> <span ng-bind="$ctrl.teamInfo.Name"></span></h3>
         </div>
         <div class="col-sm-6">
           <div class="row">
