Improve standings page
- Add wildcard option
- Sort by actual rank instead of just points

--- a/src/views/standings/standings.scss
+++ b/src/views/standings/standings.scss
@@ -1,7 +1,12 @@
-.standings-header-sortable {
-  cursor: pointer;
-}
-
 .team-standing-title {
   font-weight: 700;
+}
+
+.wildcard-boundary {
+  border-top: 4px solid #DDD;
+}
+
+.standing-number {
+  width: 20px;
+  display: inline-block;
 }
