--- a/src/views/goalieInfo/goalieInfo.template.html
+++ b/src/views/goalieInfo/goalieInfo.template.html
@@ -19,11 +19,11 @@
               </div>
               <div class="skater-info-group">
                 <label>Contract: </label>
-                <span ng-bind="$ctrl.skaterInfo.Contract"></span>
-                <span ng-if="$ctrl.skaterInfo.Contract > 1">Years x</span>
-                <span ng-if="$ctrl.skaterInfo.Contract === 1">Year x</span>
-                <span ng-if="$ctrl.skaterInfo.Salary1" ng-bind="$ctrl.skaterInfo.Salary1 | currency : '$' : 0"></span>
-                <span ng-if="!$ctrl.skaterInfo.Salary1">N/A</span>
+                <span ng-bind="$ctrl.goalieInfo.Contract"></span>
+                <span ng-if="$ctrl.goalieInfo.Contract > 1">Years x</span>
+                <span ng-if="$ctrl.goalieInfo.Contract === 1">Year x</span>
+                <span ng-if="$ctrl.goalieInfo.Salary1" ng-bind="$ctrl.goalieInfo.Salary1 | currency : '$' : 0"></span>
+                <span ng-if="!$ctrl.goalieInfo.Salary1">N/A</span>
               </div>
             </div>
             <div class="col-xs-6">
