Add finances tab to team info page

--- a/src/components/depthChart/depthChart.template.html
+++ b/src/components/depthChart/depthChart.template.html
@@ -33,9 +33,9 @@
           <thead>
             <tr>
               <th>Name</th>
-              <th>Age</th>
-              <th>Potential</th>
-              <th>Overall</th>
+              <th class="text-center">Age</th>
+              <th class="text-center">Potential</th>
+              <th class="text-center">Overall</th>
             </tr>
           </thead>
           <tbody>
@@ -59,9 +59,9 @@
           <thead>
             <tr>
               <th>Name</th>
-              <th>Age</th>
-              <th>Potential</th>
-              <th>Overall</th>
+              <th class="text-center">Age</th>
+              <th class="text-center">Potential</th>
+              <th class="text-center">Overall</th>
             </tr>
           </thead>
           <tbody>
@@ -85,9 +85,9 @@
           <thead>
             <tr>
               <th>Name</th>
-              <th>Age</th>
-              <th>Potential</th>
-              <th>Overall</th>
+              <th class="text-center">Age</th>
+              <th class="text-center">Potential</th>
+              <th class="text-center">Overall</th>
             </tr>
           </thead>
           <tbody>
@@ -114,9 +114,9 @@
           <thead>
             <tr>
               <th>Name</th>
-              <th>Age</th>
-              <th>Potential</th>
-              <th>Overall</th>
+              <th class="text-center">Age</th>
+              <th class="text-center">Potential</th>
+              <th class="text-center">Overall</th>
             </tr>
           </thead>
           <tbody>
@@ -140,9 +140,9 @@
           <thead>
             <tr>
               <th>Name</th>
-              <th>Age</th>
-              <th>Potential</th>
-              <th>Overall</th>
+              <th class="text-center">Age</th>
+              <th class="text-center">Potential</th>
+              <th class="text-center">Overall</th>
             </tr>
           </thead>
           <tbody>
