--- a/src/components/financeInfo/financeInfo.template.html
+++ b/src/components/financeInfo/financeInfo.template.html
@@ -1,81 +1,161 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-12">
     <div class="panel panel-default">
       <loader ng-if="$ctrl.loading"></loader>
-      <div class="panel-heading">Attendance (Detailed)</div>
+      <div class="panel-heading">Attendance</div>
       <div class="panel-body">
         <span ng-if="$ctrl.loadingFailed">Error loading results.</span>
-        <table class="table" ng-if="!$ctrl.loading && !$ctrl.loadingFailed">
-          <thead>
-            <tr>
-              <th>Seating Level</th>
-              <th>Ticket Price</th>
-              <th>Attendance (Avg)</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Level 1</td>
-              <td>$<span ng-bind="$ctrl.finances.TicketPriceL1 | number"></span></td>
-              <td><span ng-bind="$ctrl.averageAttendance('L1')"></span></td>
-            </tr>
-            <tr>
-              <td>Level 2</td>
-              <td>$<span ng-bind="$ctrl.finances.TicketPriceL2 | number"></span></td>
-              <td><span ng-bind="$ctrl.averageAttendance('L2')"></span></td>
-            </tr>
-            <tr ng-if="$ctrl.league === 'pro'">
-              <td>Level 3</td>
-              <td>$<span ng-bind="$ctrl.finances.TicketPriceL3 | number"></span></td>
-              <td><span ng-bind="$ctrl.averageAttendance('L3')"></span></td>
-            </tr>
-            <tr ng-if="$ctrl.league === 'pro'">
-              <td>Level 4</td>
-              <td>$<span ng-bind="$ctrl.finances.TicketPriceL4 | number"></span></td>
-              <td><span ng-bind="$ctrl.averageAttendance('L4')"></span></td>
-            </tr>
-            <tr ng-if="$ctrl.league === 'pro'">
-              <td>Luxury</td>
-              <td>$<span ng-bind="$ctrl.finances.TicketPriceLuxury | number"></span></td>
-              <td><span ng-bind="$ctrl.averageAttendance('Luxury')"></span></td>
-            </tr>
-          </tbody>
-        </table>
+        
+        <div class="row">
+          <div class="col-md-6">
+            <table class="table" ng-if="!$ctrl.loading && !$ctrl.loadingFailed">
+              <thead>
+                <tr>
+                  <th>Seating Level</th>
+                  <th>Ticket Price</th>
+                  <th>Attendance (Avg)</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Level 1</td>
+                  <td>$<span ng-bind="$ctrl.finances.TicketPriceL1 | number"></span></td>
+                  <td><span ng-bind="$ctrl.averageAttendance('L1')"></span></td>
+                </tr>
+                <tr>
+                  <td>Level 2</td>
+                  <td>$<span ng-bind="$ctrl.finances.TicketPriceL2 | number"></span></td>
+                  <td><span ng-bind="$ctrl.averageAttendance('L2')"></span></td>
+                </tr>
+                <tr ng-if="$ctrl.league === 'pro'">
+                  <td>Level 3</td>
+                  <td>$<span ng-bind="$ctrl.finances.TicketPriceL3 | number"></span></td>
+                  <td><span ng-bind="$ctrl.averageAttendance('L3')"></span></td>
+                </tr>
+                <tr ng-if="$ctrl.league === 'pro'">
+                  <td>Level 4</td>
+                  <td>$<span ng-bind="$ctrl.finances.TicketPriceL4 | number"></span></td>
+                  <td><span ng-bind="$ctrl.averageAttendance('L4')"></span></td>
+                </tr>
+                <tr ng-if="$ctrl.league === 'pro'">
+                  <td>Luxury</td>
+                  <td>$<span ng-bind="$ctrl.finances.TicketPriceLuxury | number"></span></td>
+                  <td><span ng-bind="$ctrl.averageAttendance('Luxury')"></span></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="col-md-6" ng-if="$ctrl.finances">
+            <div class="skater-info-group">
+              <label>Home Games Remaining:</label>
+              <span ng-bind="41 - $ctrl.finances.HomeGP"></span>
+            </div>
+            <div class="skater-info-group">
+              <label>Arena Capacity:</label>
+              <span ng-bind="$ctrl.totalCapacity"></span>
+            </div>
+            <div class="skater-info-group">
+              <label>Average Attendance:</label>
+              <span ng-bind="$ctrl.totalAverageAttendance"></span>
+              (<span ng-bind="100 * $ctrl.totalAverageAttendance / $ctrl.totalCapacity | number : 1"></span>%)
+            </div>
+            <div class="skater-info-group">
+              <label>Team Popularity:</label>
+              <span ng-bind="$ctrl.finances.TeamPopularity"></span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="col-md-6">
+<div class="row">
+  <div class="col-md-12">
     <div class="panel panel-default">
-      <loader ng-if="$ctrl.loading"></loader>
-      <div class="panel-heading">Attendance (Overall)</div>
+      <loader ng-if="ctrl.loading"></loader>
+      <div class="panel-heading">Income/Expenses</div>
       <div class="panel-body">
-        <div ng-if="$ctrl.finances">
-          <span ng-if="$ctrl.loadingFailed">Error loading results.</span>
-          <div class="skater-info-group">
-            <label>Home Games Remaining:</label>
-            <span ng-bind="41 - $ctrl.finances.HomeGP"></span>
+        <span ng-if="$ctrl.loadingFailed">Error loading results.</span>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="skater-info-group">
+              <label>Total Player Salaries:</label>
+              $<span ng-bind="$ctrl.finances.TotalPlayersSalaries | number"></span>
+            </div>
+            <div class="skater-info-group">
+              <label>Total Player Cap Hit:</label>
+              $<span ng-bind="$ctrl.finances.TotalPlayersSalariesAverage | number"></span>
+            </div>
+            <div class="skater-info-group">
+              <label>Special Salary Cap Total:</label>
+              $<span ng-bind="$ctrl.finances.SpecialSalaryCapY1 | number"></span>
+            </div>
+            <div class="skater-info-group">
+              <label>Coach Salary:</label>
+              $<span ng-bind="$ctrl.finances.CoachSalary | number"></span>
+            </div>
           </div>
-          <div class="skater-info-group">
-            <label>Arena Capacity:</label>
-            <span ng-bind="$ctrl.totalCapacity"></span>
+          
+          <div class="col-md-6">
+            <div class="skater-info-group">
+              <label>Average Income per Game:</label>
+              $<span ng-bind="$ctrl.finances.TotalIncome / $ctrl.finances.HomeGP | number : 0"></span>
+            </div>
+            <div class="skater-info-group">
+              <label>Year-to-Date Revenue:</label>
+              $<span ng-bind="$ctrl.finances.TotalIncome | number : 0"></span>
+            </div>
+            <div class="skater-info-group">
+              <label>Year-to-Date Expenses:</label>
+              $<span ng-bind="$ctrl.finances.ExpenseThisSeason | number : 0"></span>
+            </div>
           </div>
-          <div class="skater-info-group">
-            <label>Average Attendance:</label>
-            <span ng-bind="$ctrl.totalAverageAttendance"></span>
-            (<span ng-bind="100 * $ctrl.totalAverageAttendance / $ctrl.totalCapacity | number : 1"></span>%)
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <loader ng-if="ctrl.loading"></loader>
+      <div class="panel-heading">Season Projection</div>
+      <div class="panel-body">
+        <span ng-if="$ctrl.loadingFailed">Error loading results.</span>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="skater-info-group">
+              <label>Estimated Remaining Season Income</label>
+              $<span ng-bind="$ctrl.finances.EstimatedRevenue | number : 0"></span>
+            </div>
+            <div class="skater-info-group">
+              <label>Estimated Remaining Season Expenses (Pro):</label>
+              $<span ng-bind="$ctrl.finances.EstimatedSeasonExpense | number : 0"></span>
+            </div>
+            <div class="skater-info-group">
+              <label>Estimated Remaining Season Expenses (Farm):</label>
+              $<span ng-bind="$ctrl.finances.FarmEstimatedSeasonExpense | number : 0"></span>
+            </div>
+            <div class="skater-info-group">
+              <label>Estimated Remaining Season Expenses (Total):</label>
+              $<span ng-bind="$ctrl.finances.EstimatedSeasonExpense + $ctrl.finances.FarmEstimatedSeasonExpense | number : 0"></span>
+            </div>
           </div>
-          <div class="skater-info-group">
-            <label>Average Income per Game:</label>
-            $<span ng-bind="$ctrl.finances.TotalIncome / $ctrl.finances.HomeGP | number : 0"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Year-to-Date Revenue:</label>
-            $<span ng-bind="$ctrl.finances.TotalIncome | number : 0"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Team Popularity:</label>
-            <span ng-bind="$ctrl.finances.TeamPopularity"></span>
+
+          <div class="col-md-6">
+            <div class="skater-info-group">
+              <label>Current Bank Account:</label>
+              $<span ng-bind="$ctrl.finances.CurrentBankAccount | number"></span>
+            </div>
+            <div class="skater-info-group">
+              <label>Projected Bank Account:</label>
+              $<span ng-bind="$ctrl.finances.ProjectedBankAccount | number"></span>
+            </div>
           </div>
         </div>
       </div>
