Implement search functionality

--- a/src/components/appMenu/appMenu.template.html
+++ b/src/components/appMenu/appMenu.template.html
@@ -35,7 +35,7 @@
         <li class="menu-item-more">
           <a class="dropdown-toggle" data-toggle="dropdown">More <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li ng-repeat="menuItem in $ctrl.menuItemsMore" class="menu-item-more">
+            <li ng-repeat="menuItem in $ctrl.menuItemsMore">
               <a ng-href="{{ menuItem.url }}">
                 <span ng-bind="menuItem.text"></span>
               </a>
