--- a/src/components/appMenu/appMenu.scss
+++ b/src/components/appMenu/appMenu.scss
@@ -2,24 +2,28 @@ a.dropdown-toggle {
   cursor: pointer;
 }
 
-.menu-item-more {
-  display: none!important;
+.app-menu .nav > li.menu-item-more {
+  display: none;
 }
 
 @media (min-width: 768px) and (max-width: 1000px) {
   .app-menu .nav > li {
     &.menu-item-more {
-      display: block!important;
+      display: block;
     }
 
     &.menu-item-hide-more {
-      display: none!important;
+      display: none;
     }
 
     > a {
       padding-left: 10px;
       padding-right: 10px;
     }
+  }
+
+  .app-menu .navbar-form.navbar-right:last-child {
+    padding-left: 0;
   }
 }
 
