--- a/src/base.scss
+++ b/src/base.scss
@@ -10,6 +10,20 @@ a {
   cursor: pointer;
 }
 
+.filter-bar-heading {
+  margin-bottom: 10px;
+  vertical-align: center;
+  cursor: pointer;
+}
+
+.filter-bar {
+  display: none;
+
+  &.expanded {
+    display: block;
+  }
+}
+
 .noselect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
